fix publication badge layout and align nav order
Prevent inline publication badges from overlapping paper titles and reorder homepage navigation to follow the about page section sequence.

Made-with: Cursor

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -55,6 +55,15 @@
         display: flex;
         width: 100%;
         order: 2;
+        > div {
+            position: relative;
+            display: inline-block;
+        }
+        .badge {
+            position: absolute;
+            margin-top: .5em;
+            margin-left: -.5em;
+        }
         img {
             max-width: 400px;
             box-shadow: 3px 3px 6px #888;
@@ -98,11 +107,11 @@ h1:before, .anchor:before {
 }
 
 .badge {
+    display: inline-block;
     padding-left: 1rem;
     padding-right: 1rem;
-    position: absolute;
-    margin-top: .5em;
-    margin-left: -.5em;
+    margin-right: .5rem;
+    white-space: nowrap;
     color: white;
     background-color: #00369f;
     font-size: .8em;
